static/css/styles.css
body {
    background-color: #f2f1eb;
}

.navbar {
    background-color: #3a6351;
    margin-bottom: 0.31em
}

.navbar .navbar-brand,
.navbar .nav-link,
.navbar .navbar-toggler {
    color: #f2f1eb;
    font-family: 'Poppins', sans-serif;
}

.navbar-nav .nav-link:hover {
    color: #a79277;
}

footer {
    background-color: #3a6351;
    color: #f9f5ec;
    font-family: 'Lora', serif;
}

.projects .list-group li {
    /* TODO: Think about layout */
    padding: 0.94em;
    margin-bottom: 0.63em;
}

.projects .list-group .project-title {
    font-family: 'Poppins', sans-serif;
    font-size: 1.5em;
    font-weight: 600;
}

.projects .list-group .project-description {
    font-family: 'Lora', serif;
    font-size: 1em;
    line-height: 1.6;
}

.projects .list-group a {
    font-style: italic;
}

.hero, .bio, .skills, .experience, .education{
    margin-bottom: 0.63em
}

.hero .name {
    font-family: 'Poppins', sans-serif;
    font-size: 3em;
}

.hero .tagline {
    font-family: 'Lora, serif';
    font-size: 1.13em;
}

.hero .introduction {
    max-width: 40em;

}

.hero img {
    width: 16em;
    height: 16em;
}

